flask-application/k8s_manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-flask-app
  namespace: default
  labels:
    app: sample-flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-flask-app
  template:
    metadata:
      labels: 
        app: sample-flask-app
    spec:
      containers:
      - name: flask-app
        image: ratanboddu/sampleflaskapp:v1.0.0
        imagePullPolicy: IfNotPresent
