flask-application/k8s_manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-flask-app
  namespace: default
  labels:
    app: sample-flask-app
spec:
  type: ClusterIP
  ports:
  - port: 5678
    protocol: TCP
    targetPort: 5678
  selector:
    app: sample-flask-app
